separate out css for general layout and gridgin content (base.css and grid.css). Change layout structure to make use of hugo lookup order for ec_stories. add auto video resizing to posts. add hero to ec_stories.

--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "_data$"]
     maxSeeAlsoItems = 5
 
     # Custom CSS
-    custom_css = ["css/sea.css","css/custom.css","css/hero.css"]
+    custom_css = ["css/sea.css","css/base.css","css/grid.css","css/hero.css"]
     
     # Custom JS
     custom_js = []
