--- a/config.toml
+++ b/config.toml
@@ -22,9 +22,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "_data$"]
     author = "Climate and Society"
     description = "Exploring Human Relationships to the Ocean at SEA Semester"
     keywords = ""
-    info = "Exploring Human Relationships to the Ocean<br>at [SEA Semester](https://www.sea.edu)"
+    info = "Exploring Human Relationships to the Ocean at SEA Semester"
     avatarurl = ""
     footercontent = ""
+    background_image = ""
 
     dateformat = "January 2, 2006"
 
@@ -32,7 +33,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "_data$"]
     hideCopyright = false
 
     # Git Commit in Footer, uncomment the line below to enable it.
-    commit = "https://github.com/luizdepra/hugo-coder/tree/"
+    # commit = "https://github.com/luizdepra/hugo-coder/tree/"
 
     rtl = false
 
