--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "_data$"]
     avatarurl = ""
     footercontent = ""
     background_image = ""
+    feature_pages = ["about","ec_stories"]
 
     dateformat = "January 2, 2006"
 
@@ -61,9 +62,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "_data$"]
   name = "About"
   weight = 1
   url = "/about/"
+      
+[[menu.main]]
+  name = "Fieldwork"
+  weight = 2
+  url = "/fieldwork/"
         
 [[menu.main]]
-  name = "Radio"
-  weight = 2
+  name = "Radio Stories"
+  weight = 3
   url = "/ec_stories/"
 
